# doc-extractor

./: README.md  package.json
backend/: .env.local  .gitignore  database_setup.py  pyproject.toml
backend/app/: main.py  models.py
frontend/src/app/: layout.tsx  page.tsx
